Bug 560503.  Don't check for mutation observer uniqueness; callers should handle that.  r=sicking