content/base/src/nsGenericElement.cpp
@@ -283,24 +283,6 @@ nsINode::CreateSlots()
   return new nsSlots(mFlagsOrSlots);
 }
 
-void
-nsINode::AddMutationObserver(nsIMutationObserver* aMutationObserver)
-{
-  nsSlots* slots = GetSlots();
-  if (slots) {
-    slots->mMutationObservers.AppendElementUnlessExists(aMutationObserver);
-  }
-}
-
-void
-nsINode::RemoveMutationObserver(nsIMutationObserver* aMutationObserver)
-{
-  nsSlots* slots = GetExistingSlots();
-  if (slots) {
-    slots->mMutationObservers.RemoveElement(aMutationObserver);
-  }
-}
-
 PRBool
 nsINode::IsEditableInternal() const
 {
